# db-kursach-s2

./: pyproject.toml
src/: db.py  main.py
src/CUI/: constructor.py
src/controllers/: modelController.py  searchController.py
src/models/: category.py  client.py  links.py  order.py  product.py
src/parsingData/: parseCsv.py
src/randomizing/: generateData.py
src/scrapping/: amazon.py
src/views/: dataView.py  graphsView.py  modelView.py  searchView.py
src/visualzation/: graphs.py
