[tool.poetry]
name = "db-course-work-s2"
version = "0.1.0"
description = ""
authors = ["Dizzzmas <yankovskyi.dmytro736@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.15"
psycopg2-binary = "^2.8.6"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
selectorlib = "^0.16.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
